@@ -1,0 +1,3 @@
+<html><body>New syntax highlighting modes are very easy to add. See the
+<b>Writing Modes</b> part of the jEdit user's guide
+(<b>Help</b>&gt;<b>jEdit Help</b>) to find out how </body></html>
