@@ -1,0 +1,5 @@
+<html><body>jEdit macros are written in the BeanShell scripting
+language. See the
+<b>Writing Macros</b> part of the jEdit user's guide
+(<b>Help</b>&gt;<b>jEdit Help</b>) to find out more about
+BeanShell.</body></html>
