@@ -1,0 +1,4 @@
+<html><body>If you want to run compilers and other external programs
+from within jEdit, you should install the <b>Console</b> plugin. Plugins can
+be downloaded and installed from within jEdit using the plugin manager
+(<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
