@@ -1,0 +1,4 @@
+<html><body>If you use jEdit to edit Java source, you should install the
+<b>JBrowse</b> plugin. Plugins can
+be downloaded and installed from within jEdit using the plugin manager
+(<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
