@@ -1,0 +1,6 @@
+<html><body>
+If your mouse has a scroll wheel, you should install the <b>WheelMouse</b>
+plugin. This plugin requires either JDK 1.4 running on any platform,
+or JDK 1.2 (or later) running on Windows. Plugins can
+be downloaded and installed from within jEdit using the plugin manager
+(<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
