@@ -1,0 +1,5 @@
+<html><body>
+To stay up-to-date in the world of jEdit,
+subscribe to the mailing lists by visiting
+<font color="blue"><u>http://www.jedit.org/?page=lists</u></font>.
+</body></html>
